<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, LudoActivity!</string>
    <string name="app_name">LudoNet (C)</string>
    
    <string name="sharedpreferences_name">NetLudo_Settings</string>
    <string name="sharedpreferences_ludoboardfile">ludoBoardFile</string>
    <string name="sharedpreferences_ludoboardname">ludoBoardName</string>
    <string name="sharedpreferences_takeoff">ludoTakeOff</string>
    <string name="sharedpreferences_noofattemts">ludoNoOfAttemts</string>
    <string name="sharedpreferences_reroll">ludoReRoll</string>
    <string name="sharedpreferences_connectip">connectIp</string>
    <string name="sharedpreferences_sound">soundOn</string>
    
    <string name="choosegame_button_host_game">Start ett nytt spill</string>
    <string name="choosegame_button_join_game">Kople til et eksisterende spill</string>
    
    <string name="settings_text_take_off">Brikke settes i spill med:</string>
    <string name="settings_text_no_of_attemts">Antall forsøk på sette brikke i spill:</string>
    <string name="settings_text_reroll">Ekstrakast for:</string>
    <string name="settings_text_gameboard">Velg brett:</string>
    <string name="settings_text_noboard">Ingen brett valgt</string>
    <string name="settings_radio_take_off_0">6</string>
    <string name="settings_radio_take_off_1">2,4,6</string>
    <string name="settings_radio_take_off_2">5,6</string>
    <string name="settings_radio_no_of_attemts_0">1</string>
    <string name="settings_radio_no_of_attemts_1">3</string>
    <string name="settings_radio_no_of_attemts_2">6</string>
    <string name="settings_radio_reroll_0">6</string>
    <string name="settings_radio_reroll_1">2,4,6</string>
    <string name="settings_radio_reroll_2">5,6</string>
	<string name="settings_button_next">OK</string>
	<string name="settings_toast_missingboard">Du må først velge et ludobrett</string>
    
    <string name="start_radio_host_game">Start ett nytt spill</string>
    <string name="start_radio_join_game">Kople til et eksisterende spill</string>
    <string name="start_text_ip_server">Din IP-adresse:</string>
    <string name="start_text_ip_client">Angi IP-adresse:</string>
    <string name="start_text_players">Spillere:</string>
    <string name="start_text_local">= lokal spiller</string>
    <string name="start_text_remote">= ekstern spiller</string>
    <string name="start_text_player_info">Klikk på fargeknappene for dine valg.
    \nRød farge er alltid deg.
    \nSpillere som ikke er lokal eller ekstern er ikke aktive.</string>
    <string name="start_toast_remote_player">Denne fargen er opptatt</string>
    <string name="start_button_ip_server">Send invitasjon</string>
    <string name="start_button_ip_client">Kople til</string>
    <string name="start_button_start_game">Spill LUDO</string>
    <string name="start_edittext_ip">10.0.2.2</string>
    <!--string name="start_edittext_ip">192.168.1.35</string-->
    <string name="start_edittext_no_network">No network available</string>
    <string name="start_invite_text">inviterer deg til et spennende slag ludo.</string>
    
    <string name="game_toast_nolegalmoves">Ingen gyldig flytt.</string>
    <string name="game_toast_playersturn">sin tur til å trille.</string>
    <string name="game_toast_playersturnyou">Det er din tur å trille.</string>
    <string name="game_toast_firsttime">Rist telefonen eller trykk på terningen.</string>
    <string name="game_dialog_quit">Er du sikker på at du vil avslutte?</string>
    <string name="game_dialog_quit_yes">Ja</string>
    <string name="game_dialog_quit_no">Nei</string>
    
    <string name="msg_network_waiting_title">Venter...</string>
    <string name="msg_network_waitingfarge">Du har blitt tildelt fargen</string>
    <string name="msg_network_waitingingenfarge">Du er satt opp som tilskuer.</string>
    <string name="msg_network_waiting">Venter på at spillet skal starte.</string>
    <string name="msg_error_heading">FEIL!!</string>
    <string name="msg_network_no_connect">Ingen forbindelse...</string>
    <string name="msg_network_lost">Mistet forbindelsen...</string>
    <string name="msg_network_player">Spiller</string>
    <string name="msg_network_server">Server</string>
    <string name="msg_network_player_gone">Spiller borte...</string>
    <string name="msg_network_player_checked_out">forlot spillet.</string>
    <string name="msg_winnerme">Du er vinneren.</string>
    <string name="msg_winnermetitle">Gratulerer!</string>
    <string name="msg_winner">har vunnet.</string>
    <string name="msg_winnertitle">Spiller er over!</string>
   
    
</resources>
