<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingslayout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/ludobackground">
    <LinearLayout 
    	xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/ludologolayout"
    	android:orientation="horizontal"
    	android:layout_centerHorizontal="true"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_gravity="center_horizontal"
    	android:layout_marginTop="10dip"
    	android:layout_marginBottom="10dip"
    	>
    	<ImageView 
    		android:id="@+id/imageViewL" 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		android:src="@drawable/l" 
    		>
    	</ImageView>    		
    	<ImageView 
    		android:id="@+id/imageViewU" 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		android:src="@drawable/u" 
    		>
    	</ImageView>
    	<ImageView 
    		android:id="@+id/imageViewD" 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		android:src="@drawable/d" 
    		>
    	</ImageView>    		
    	<ImageView 
    		android:id="@+id/imageViewO" 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content" 
    		android:src="@drawable/o" 
    		>
    	</ImageView>
    </LinearLayout>
  	<ScrollView 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:scrollbarStyle="insideOverlay" 
		android:fadeScrollbars="false" 
		android:visibility="visible"  
		android:scrollbarSize="40dip" 
		android:scrollbars="vertical">
		<LinearLayout 
			android:id="@+id/LinearLayout_svar"
			android:orientation="vertical" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_marginTop="10dip"
  			android:layout_marginBottom="10dip" android:duplicateParentState="true">
			<ImageView
		   		android:layout_height="wrap_content" 
		   		android:src="@drawable/splitter" 
		   		android:layout_width="fill_parent" 
		   		android:id="@+id/imageViewSplitter2" 
		   		android:scaleType="fitXY" 
		   		android:layout_marginBottom="4dip" 
		   		android:layout_marginTop="4dip"
		   		>
			</ImageView>
		
		
			<!-- TAKEOFF -->
			<TextView 
		   		android:id="@+id/textTakeOff" 
				android:text="@string/settings_text_take_off" 
		   		android:layout_width="wrap_content" 
		   		android:layout_height="wrap_content" 
		   		android:textStyle="bold"
		   		android:layout_marginLeft="3dip" 
		   		>
		   	</TextView>
			<RadioGroup 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:id="@+id/radioTakeOff"
				android:orientation="horizontal"
				android:layout_marginLeft="3dip" 
				>
				<RadioButton 
					android:layout_height="wrap_content" 
					android:id="@+id/radioTakeOff0" 
					android:layout_width="100dip" 
					android:text="@string/settings_radio_take_off_0"
					android:checked="true"
					>
				</RadioButton>
				<RadioButton 
					android:layout_height="wrap_content" 
					android:id="@+id/radioTakeOff1" 
					android:layout_width="100dip"
					android:text="@string/settings_radio_take_off_1"
					>
				</RadioButton>
				<RadioButton 
					android:layout_height="wrap_content" 
					android:id="@+id/radioTakeOff2" 
					android:layout_width="100dip"
					android:text="@string/settings_radio_take_off_2"
					>
				</RadioButton>
			</RadioGroup>	
			<ImageView 
		   		android:layout_height="wrap_content" 
		   		android:src="@drawable/splitter" 
		   		android:layout_width="fill_parent" 
		   		android:id="@+id/imageViewSplitter2" 
		   		android:scaleType="fitXY" 
		   		android:layout_marginBottom="4dip" 
		   		android:layout_marginTop="4dip"
		   		>
			</ImageView>
		
		
			<!-- ANTALL FORSØK -->
			<TextView 
		   		android:id="@+id/textNoOfAttemts" 
				android:text="@string/settings_text_no_of_attemts" 
		   		android:layout_width="wrap_content" 
		   		android:layout_height="wrap_content" 
		   		android:textStyle="bold"
		   		android:layout_marginLeft="3dip" 
		   		>
		   	</TextView>	
			<RadioGroup 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:id="@+id/radioNoOfAttemts"
				android:orientation="horizontal"
				android:layout_marginLeft="3dip" 
				>
				<RadioButton 
					android:layout_height="wrap_content" 
					android:id="@+id/radioNoOfAttemts0" 
					android:layout_width="100dip"
					android:text="@string/settings_radio_no_of_attemts_0"
					>
				</RadioButton>
				<RadioButton 
					android:layout_height="wrap_content" 
					android:id="@+id/radioNoOfAttemts1" 
					android:layout_width="100dip"
					android:text="@string/settings_radio_no_of_attemts_1"
					android:checked="true"
					>
				</RadioButton>
				<RadioButton 
					android:layout_height="wrap_content" 
					android:id="@+id/radioNoOfAttemts2" 
					android:layout_width="100dip"
					android:text="@string/settings_radio_no_of_attemts_2"
					>
				</RadioButton>
			</RadioGroup>	
		
			<ImageView 
		   		android:layout_height="wrap_content" 
		   		android:src="@drawable/splitter" 
		   		android:layout_width="fill_parent" 
		   		android:id="@+id/imageViewSplitter2" 
		   		android:scaleType="fitXY" 
		   		android:layout_marginBottom="4dip" 
		   		android:layout_marginTop="4dip"
		   		>
			</ImageView>
		
		
			<!-- REROLL -->
			<TextView 
		   		android:id="@+id/textReRoll" 
				android:text="@string/settings_text_reroll" 
		   		android:layout_width="wrap_content" 
		   		android:layout_height="wrap_content" 
		   		android:textStyle="bold"
		   		android:layout_marginLeft="3dip" 
		   		>
		   	</TextView>	
		   	<RadioGroup 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:id="@+id/radioReRoll"
				android:orientation="horizontal"
				android:layout_marginLeft="3dip" 
				>
				<RadioButton 
					android:layout_height="wrap_content" 
					android:id="@+id/radioReRoll0" 
					android:layout_width="100dip"
					android:text="@string/settings_radio_reroll_0"
					android:checked="true"
					>
				</RadioButton>
				<RadioButton 
					android:layout_height="wrap_content" 
					android:id="@+id/radioReRoll1" 
					android:layout_width="100dip"
					android:text="@string/settings_radio_reroll_1" android:textColor="#FFFFFF">
				</RadioButton>
				<RadioButton 
					android:layout_height="wrap_content" 
					android:id="@+id/radioReRoll2" 
					android:layout_width="100dip"
					android:text="@string/settings_radio_reroll_2"
					>
				</RadioButton>
			</RadioGroup>	
		   	
		   	
			<ImageView 
		   		android:layout_height="wrap_content" 
		   		android:src="@drawable/splitter" 
		   		android:layout_width="fill_parent" 
		   		android:id="@+id/imageViewSplitter2" 
		   		android:scaleType="fitXY" 
		   		android:layout_marginBottom="4dip" 
		   		android:layout_marginTop="4dip"
		   		>
			</ImageView>
		
			
			<!-- VELG BRETT -->
			<TextView 
		   		android:id="@+id/textTakeOff" 
				android:text="@string/settings_text_gameboard" 
		   		android:layout_width="wrap_content" 
		   		android:layout_height="wrap_content" 
		   		android:textStyle="bold"
		   		android:layout_marginLeft="3dip" 
		   		>
		   	</TextView>
			<RelativeLayout 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/settingslayout"
			    android:orientation="horizontal"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content" 
			    android:layout_marginLeft="3dip" 
			    android:layout_marginRight="3dip"
			    >
				<TextView 
			   		android:id="@+id/textChosenBoard" 
					android:text="valgt brett" 
			   		android:layout_width="wrap_content" 
			   		android:layout_height="wrap_content" 
			   		android:layout_alignParentLeft="true"
			   		android:layout_centerVertical="true" 
			   		android:textSize="20dip"
			   		>
			   	</TextView>
				<ImageButton 
					android:layout_width="wrap_content" 
					android:id="@+id/imageButtonChooseBoard" 
					android:src="@drawable/btn_board"
					android:background="@null"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_centerVertical="true" 
					android:layout_marginLeft="200dip"
					>
				</ImageButton>
		   	</RelativeLayout>
		   	   <ImageView android:layout_height="wrap_content" android:layout_marginBottom="4dip" android:layout_marginTop="4dip" android:src="@drawable/splitter" android:layout_width="fill_parent" android:id="@+id/imageViewSplitter2" android:scaleType="fitXY"></ImageView>
		
			<RelativeLayout 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/settingslayout"
			    android:orientation="horizontal"
			    android:layout_width="fill_parent"
			    android:layout_height="60dip" 
			    android:layout_marginLeft="3dip" 
			    android:layout_marginRight="3dip"
			    >
				<Button 
					android:text="@string/settings_button_next" 
					android:id="@+id/buttonNext" 
					android:layout_width="100dip" 
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_alignParentBottom="true"				
					>
				</Button>
		   	</RelativeLayout>
   		</LinearLayout>
   		</ScrollView>

</LinearLayout>
